syntax = "proto3";

package feedback_fusion_v1;

import "google/protobuf/timestamp.proto";

message CreatePromptRequest {
  string target = 1;
  string title = 2;
  string description = 3;
  bool active = 4;
}

message ProtoPrompt {
  string id = 1;
  string title = 2;
  string description = 3;
  string target = 4;
  bool active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetPromptRequest { string id = 1; }

message GetPromptsRequest {
  int32 page_token = 1;
  int32 page_size = 2;
  string target = 3;
}

message PromptPage {
  int32 page_token = 1;
  int32 next_page_token = 2;
  int32 page_size = 3;
  int32 total = 4;

  repeated ProtoPrompt prompts = 5;
}

message UpdatePromptRequest {
  string id = 1;
  optional bool active = 2;
  optional string description = 3;
  optional string title = 4;
}

message DeletePromptRequest { string id = 2; }
